[gd_scene load_steps=15 format=3 uid="uid://cp2foxknokc0g"]

[ext_resource type="Script" path="res://EditSelectedSchedule/edit_selected_schedule.gd" id="1_j7crm"]
[ext_resource type="Texture2D" uid="uid://cmfviwdjfkulp" path="res://UI/Images/full_screen_background.png" id="1_vjuji"]
[ext_resource type="Theme" uid="uid://7ug4svgqw7bl" path="res://UI/Themes/my_header_label_theme.tres" id="2_qu5ow"]
[ext_resource type="Texture2D" uid="uid://ck22lg7ds7ovc" path="res://UI/Images/text_input.png" id="4_86okj"]
[ext_resource type="Theme" uid="uid://56nx8cnihqa2" path="res://UI/Themes/my_line_edit_theme.tres" id="5_c1a68"]
[ext_resource type="Theme" uid="uid://bio0np2bdwycd" path="res://UI/Themes/my_label_theme.tres" id="6_6t5mj"]
[ext_resource type="Theme" uid="uid://cepf0eeqt2mpk" path="res://UI/Themes/my_spinbox_theme.tres" id="7_pol5a"]
[ext_resource type="Theme" uid="uid://wgr8ngf3t34r" path="res://UI/Themes/my_button_theme.tres" id="8_m6b83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdoeq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xosmk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ry86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ple5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24chu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbkaq"]

[node name="EditSelectedSchedule" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j7crm")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.196078, 0.196078, 1)

[node name="Foreground" type="NinePatchRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.046
anchor_right = 0.964
anchor_bottom = 0.954
offset_left = 0.879997
offset_top = 0.319996
offset_right = -0.880127
offset_bottom = -0.320068
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vjuji")
patch_margin_left = 42
patch_margin_top = 42
patch_margin_right = 42
patch_margin_bottom = 42

[node name="CloseButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.978
anchor_right = 1.0
anchor_bottom = 0.041
offset_left = 31.1598
offset_bottom = -32.18
grow_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cdoeq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xosmk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3ry86")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ple5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24chu")

[node name="HeaderLabel" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.143
offset_bottom = -117.14
grow_horizontal = 2
theme = ExtResource("2_qu5ow")
text = "Header Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputsContainer" type="HBoxContainer" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -604.0
offset_top = 150.0
offset_right = 604.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_constants/separation = 52

[node name="MovieNameInputBackground" type="TextureRect" parent="Background/Foreground/InputsContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
texture = ExtResource("4_86okj")

[node name="MovieNameInput" type="LineEdit" parent="Background/Foreground/InputsContainer/MovieNameInputBackground"]
layout_mode = 0
offset_left = 17.0
offset_top = 15.0
offset_right = 381.0
offset_bottom = 85.0
theme = ExtResource("5_c1a68")
placeholder_text = "Enter Movie Name..."

[node name="PriorityContainer" type="HBoxContainer" parent="Background/Foreground/InputsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_constants/separation = 30

[node name="PriorityLabel" type="Label" parent="Background/Foreground/InputsContainer/PriorityContainer"]
layout_mode = 2
theme = ExtResource("6_6t5mj")
text = "Priority"

[node name="PrioritySpinBox" type="SpinBox" parent="Background/Foreground/InputsContainer/PriorityContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("7_pol5a")

[node name="MovieColorContainer" type="PanelContainer" parent="Background/Foreground/InputsContainer"]
custom_minimum_size = Vector2(320, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fbkaq")

[node name="MovieColorLabel" type="Label" parent="Background/Foreground/InputsContainer/MovieColorContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_6t5mj")
text = "Movie Color:"

[node name="MovieColorPicker" type="ColorPickerButton" parent="Background/Foreground/InputsContainer/MovieColorContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
color = Color(0.00392157, 0.682353, 0.682353, 1)

[node name="ErrorLabel" type="Label" parent="Background/Foreground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -230.0
offset_right = 500.0
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "How big
could th"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AddMovieButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.396
anchor_top = 0.454
anchor_right = 0.604
anchor_bottom = 0.546
offset_left = -14.8799
offset_top = -124.92
offset_right = 14.8801
offset_bottom = -115.08
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_m6b83")
text = "Add Movie"

[node name="MovieButtonsScrollContainer" type="ScrollContainer" parent="Background/Foreground"]
custom_minimum_size = Vector2(1300, 370)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -650.0
offset_top = -530.0
offset_right = 650.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0

[node name="MovieButtonsContainer" type="GridContainer" parent="Background/Foreground/MovieButtonsScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 30
columns = 3

[node name="BackButton" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.753
anchor_top = 0.714
anchor_right = 0.978
anchor_bottom = 0.816
offset_left = -0.339966
offset_top = 0.280029
offset_right = -0.839966
offset_bottom = 0.320068
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("8_m6b83")
text = "Back"

[node name="DeleteScheduleButton2" type="Button" parent="Background/Foreground"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.753
anchor_top = 0.857
anchor_right = 0.978
anchor_bottom = 0.959
offset_left = -0.339966
offset_top = 0.140076
offset_right = -0.839966
offset_bottom = 0.180054
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("8_m6b83")
text = "Delete Schedule"

[connection signal="pressed" from="Background/Foreground/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Background/Foreground/AddMovieButton" to="." method="_on_add_movie_button_pressed"]
[connection signal="pressed" from="Background/Foreground/BackButton" to="." method="_on_back_button_pressed"]
